# PyMailDev

./: .gitignore  .pyup.yml  MANIFEST.in  README.md  appveyor.yml  pylintrc  pylintrc_rest  requirements.txt  setup.cfg  setup.py  setup_extends.py
.circleci/: config.yml
PyMailDev/: __init__.py  py.py
PyMailDev/gui/view/: sendForm.py
pymaildev/: __init__.py  __main__.py  pymail.py
pymaildev/core/: __init__.py
pymaildev/core/config/: conf.py
pymaildev/core/server/: MailServer.py  __init__.py  types.py
pymaildev/core/utils/: encryption.py
pymaildev/gui/: __init__.py
pymaildev/gui/controller/: __init__.py  accountParams.py  controllerQML.py  email.py  emails.py  mail.py  main.py  parameters.py
pymaildev/gui/model/: __init__.py  account.py  email.py  emailResume.py  parameter.py  register.py
pymaildev/gui/view/: __init__.py  listForm.py  parametersForm.py  sendForm.py  viewQML.py
pymaildev/resources/: __init__.py  mails_param.yml  parameters.json
pymaildev/resources/ico/: Wwalczyszyn-Mail.icns
pymaildev/resources/qml/: AccountParams.qml  AccountParamsForm.ui.qml  AccountParamsForm.ui.qmlc  Mail.qmlc  MailField.qml  MailField.qmlc  MailForm.ui.qml  MailForm.ui.qmlc  MainForm.ui.qml  MainForm.ui.qmlc  PasswordField.qml  PasswordField.qmlc  PyMailDevUI.pro  ToolBarSeparator.qml  accountParams.qml  accountParams.qmlc  mail.qml  main.qml  main.qmlc  qml.qrc
pymaildev_tests/: _MainTest.py  __init__.py  pycodestyleTest.py  test_pep8.py  test_pycodestyle.py  test_server_autoconf.py
