#https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
#name = my_package
#version = attr: src.VERSION
description = Python mail client by developpers
#long_description = file: README.rst
keywords = mail, email, dev, devel, developer
classifiers =
    Operating System :: OS Independent
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Environment :: Win32 (MS Windows)
    Environment :: MacOS X
    Natural Language :: French
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Communications :: Email
    Topic :: Desktop Environment
    Framework :: Flake8
    License :: Other/Proprietary License
    License :: Free For Home Use
    License :: Free for non-commercial use
    Development Status :: 1 - Planning

[options]
#zip_safe = False
include_package_data = True
#packages = find:
#scripts =
#    bin/first.py
#    bin/second.py

[options.package_data]

[options.extras_require]

[options.packages.find]
#exclude =
#    src.subpackage2

[aliases]
#test = pytest

[bdist_wheel]
#python-tag = py32

[sdist]

[flake8]
output-file = reports/flake8.txt
tee = True
doctests = True
#ignore = D203
#exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
#max-complexity = 15
count = True
#format=pylint
show-source = True
statistics = True
#enable-extensions = H111,G123,C812,C813,C815,C816
#    ,F48,F481
max-line-length = 160

[pep8]
#ignore = E226,E302,E41
max-line-length = 160
show-source = True
show-pep8 = True
count = True
statistics = True

[pycodestyle]
show-source = True
show-pep8 = True
count = True
max-line-length = 160

[pydocstyle]
explain = true
source = true
count = true
max-line-length = 160
